@@ -1,5 +1,7 @@
 #include "base64streambufbase"
 
+#include <bobcat/exception>
+
 using namespace std;
 using namespace FBB;
 using namespace IUO;
